[tool.poetry]
name = "best-cheap-breakfast"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
requests = "^2.27.1"
lxml = "^4.7.1"
selenium = "^4.1.0"
pandas = "^1.3.5"
webdriver-manager = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
